# cargo-out-dir

./: Cargo.toml  README.md
src/: main.rs
